Fix bug align btns in login and register page(template)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,6 +17,15 @@ body {
     text-align: left;
 }
 
+.text-center{
+    text-align: center;
+}
+
+.mx-auto{
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .d-none{
     display: none;
 }
